v4.1.53
- Added - ...

v4.1.52
- Added - New Gutenberg Block: Import Block JSON
- Added - New Gutenberg Block: Lorem Ipsum
- Added - New Gutenberg Plugin: Export Block as JSON
- Fixed - Small issue with author box Twitter URL
- Updated - Minor CSS improvements for button

v4.1.51
- Added - Buttons Gutenberg Block CSS
- Updated - HighLight Color - improvements to JS based on WP Core Text Color
- Updated - Minor CSS improvements for button

v4.1.5
- Updated - Minor improvements to Bootstrap Nav Walker
- Updated - Major improvements to Columns/Column default blocks (added patterns with BootStrap Columns)
- Updated - CSS Improvements to Gutenberg buttons + BootStrap
- Updated - JS Refactor + added Component/JSManager/Template as default JS + Run JS routes from main theme (class-scripts.php)
- Removed - Text Color Gutenberg format

v4.1.4
- Fixed - Fixed minor issue with Author Box social items + set them in config file.
- Added - Author box config items and updated code to use them
- Updated - Customizer Public CPT defaults - allow WOO "product" post type
- Updated - WooCommerce Customizer - partials updated for WOO cpt
- Updated - Minor CSS improvements
- Removed - WooCommerce Customizer modules - since we do it in "public_post_types"
- Removed - "wecodeart/filter/support/yoast/breadcrumbs/woocommerce" filter

v4.1.3
- Fixed - wecodeart_config( 'textdomain' ) to 'wecodeart' across all translation functions

v4.1.2
- Added - wecodeart/filter/search/get_html filter for filtering the search form/widget HTML
- Added - Feature: Lazy load images in Chrome 76+ (off by default, enabled with wecodeart-lazy-images theme support)
- Removed - Deprecated functions

v4.1.1
- Updated - Use add_post_type_support( 'post', 'wecodeart-post-info' ); only for posts (was on all public posts)
- Updated - wecodeart( 'public_posts_types' ) to "Factory"
- Removed - wecodeart/bind/public_post_types/args and wecodeart/bind/public_post_types filters

v4.1.0