@@ -9,7 +9,7 @@
  * @subpackage 	Admin
  * @copyright   Copyright (c) 2019, WeCodeArt Framework
  * @since 		3.8.1
- * @version		4.0.0
+ * @version		4.1.53
  */
 
 namespace WeCodeArt;
@@ -42,29 +42,15 @@ class Admin {
 	/**
 	 * Register Notices
 	 *
-	 * @since 3.8.1
+	 * @since 	3.8.1
+	 * @version	4.1.53
 	 */
 	public static function register_notices() {
 		if ( false === get_transient( 'wca-notification-theme-options' ) ) {
 			Admin\Notifications::add( [
 				'id'		=> 'wca-notification-theme-options',
 				'type'		=> '',
-				'message'	=> sprintf(
-					'<h3 class="wca-notice__heading">%1$s</h3>
-					<div class="wca-notice__content">
-						<p>%2$s</p>
-						<p>
-							<a href="%3$s" data-repeat="%6$s" class="button-primary">%4$s</a>
-							<a href="#" data-repeat="%6$s" class="wca-notice__close button-secondary">%5$s</a>
-						</p>
-					</div>',
-					esc_html__( 'Did you know? WeCodeArt Framework uses Customizer to manage options!', 'wecodeart' ),
-					esc_html__( 'Go to WP Customizer and see the options. Each CPT has it\'s own options, based on page/archive you are currently viewing in customizer.', 'wecodeart' ),
-					esc_url( admin_url( '/customize.php' ) ),
-					esc_html__( 'Awesome, show me the options', 'wecodeart' ),
-					esc_html__( 'Thanks, but I already know', 'wecodeart' ),
-					WEEK_IN_SECONDS
-				),
+				'message'	=> Markup::template( [ 'admin/notification', 'options' ], [], false ),
 				'repeat'	=> WEEK_IN_SECONDS,
 				'priority'	=> 5,
 			] );
@@ -75,36 +61,7 @@ class Admin {
 				'id'		=> 'wca-notification-theme-rate',
 				'type'		=> '',
 				'class'		=> 'wca-notice--theme-rating',
-				'message'	=> sprintf(
-					'<div class="wca-notice__image">
-						<img src="%1$s" class="custom-logo" alt="WeCodeArt Framework" itemprop="logo">
-					</div> 
-					<div class="wca-notice__content">
-						<h3 class="wca-notice__heading">%2$s</h3>
-						<div class="wca-notice__container wca-notice__container--column">
-							<p>%3$s</p>
-							<p>
-								<a href="%4$s" class="wca-notice__close button-primary" target="_blank">%5$s</a>
-								<a href="#" data-repeat="%8$s" class="wca-notice__close">
-									<span class="dashicons dashicons-calendar"></span>
-									%6$s
-								</a>
-								<a href="#" class="wca-notice__close">
-									<span class="dashicons dashicons-smiley"></span>
-									%7$s
-								</a>
-							</p>
-						</div>
-					</div>',
-					'https://www.wecodeart.com/wp-content/uploads/2019/01/cropped-wecodeart-logo-2.png',
-					esc_html__( 'Hello! I\'m glad you use WeCodeArt Framework to build this website - Thanks a ton!', 'wecodeart' ),
-					esc_html__( 'Could you please do me a BIG favor and give it a 5-star rating on WordPress? This would boost my motivation and help other users make a comfortable decision while choosing the WeCodeArt Framework.', 'wecodeart' ),
-					'https://wordpress.org/support/theme/wecodeart/reviews/?filter=5#new-post',
-					esc_html__( 'Ok, you deserve it', 'wecodeart' ),
-					esc_html__( 'Remind me later', 'wecodeart' ),
-					esc_html__( 'I already did', 'wecodeart' ),
-					WEEK_IN_SECONDS
-				),
+				'message'	=> Markup::template( [ 'admin/notification', 'rating' ], [], false ),
 				'repeat'	=> WEEK_IN_SECONDS,
 				'priority'	=> 10,
 			] );
