@@ -1,0 +1,40 @@
+<?php
+/**
+ * WeCodeArt Framework.
+ *
+ * WARNING: This file is part of the core WeCodeArt Framework. DO NOT edit this file under any circumstances.
+ * Please do all modifications in the form of a child theme.
+ *
+ * @package 	WeCodeArt Framework
+ * @subpackage 	Notification Opts Template
+ * @since 		4.1.53
+ * @version		4.1.53
+ */
+
+defined( 'ABSPATH' ) || exit();
+
+?>
+<h3 class="wca-notice__heading"><?php
+
+    esc_html_e( 'Did you know? WeCodeArt Framework uses Customizer to manage options!', 'wecodeart' );
+    
+?></h3>
+<div class="wca-notice__content">
+    <p><?php
+
+    esc_html_e( 'Go to WP Customizer and see the options. Each CPT has it\'s own options, based on page/archive you are currently viewing in customizer.', 'wecodeart' );
+
+    ?></p>
+    <p>
+        <a href="<?php echo esc_url( admin_url( '/customize.php' ) ); ?>" data-repeat="<?php echo esc_attr( WEEK_IN_SECONDS ); ?>" class="button-primary"><?php
+        
+        esc_html_e( 'Awesome, show me the options', 'wecodeart' );
+        
+        ?></a>
+        <a href="#" data-repeat="<?php echo esc_attr( WEEK_IN_SECONDS ); ?>" class="wca-notice__close button-secondary"><?php
+        
+        esc_html_e( 'Thanks, but I already know', 'wecodeart' );
+        
+        ?></a>
+    </p>
+</div>
