@@ -1,0 +1,52 @@
+<?php
+/**
+ * WeCodeArt Framework.
+ *
+ * WARNING: This file is part of the core WeCodeArt Framework. DO NOT edit this file under any circumstances.
+ * Please do all modifications in the form of a child theme.
+ *
+ * @package 	WeCodeArt Framework
+ * @subpackage 	Notification Rating Template
+ * @since 		4.1.53
+ * @version		4.1.53
+ */
+
+defined( 'ABSPATH' ) || exit();
+
+?>
+<div class="wca-notice__image">
+    <img src="https://www.wecodeart.com/wp-content/uploads/2019/01/cropped-wecodeart-logo-2.png" class="custom-logo" alt="WeCodeArt Framework" itemprop="logo">
+</div>
+<div class="wca-notice__content">
+    <h3 class="wca-notice__heading"><?php
+
+    esc_html_e( 'Hello! I\'m glad you use WeCodeArt Framework to build this website - Thanks a ton!', 'wecodeart' );
+
+    ?></h3>
+    <div class="wca-notice__container wca-notice__container--column">
+        <p><?php
+
+        esc_html_e( 'Could you please do me a BIG favor and give it a 5-star rating on WordPress? This would boost my motivation and help other users make a comfortable decision while choosing the WeCodeArt Framework.', 'wecodeart' );
+
+        ?></p>
+        <p>
+            <a href="https://wordpress.org/support/theme/wecodeart/reviews/?filter=5#new-post" class="wca-notice__close button-primary" target="_blank"><?php
+            
+            esc_html_e( 'Ok, you deserve it', 'wecodeart' )
+
+            ?></a>
+            <a href="#" data-repeat="<?php echo esc_attr( WEEK_IN_SECONDS ); ?>" class="wca-notice__close">
+                <span class="dashicons dashicons-calendar"></span><?php
+        
+                esc_html_e( 'Remind me later', 'wecodeart' );
+            
+            ?></a>
+            <a href="#" class="wca-notice__close">
+                <span class="dashicons dashicons-smiley"></span><?php
+        
+                esc_html_e( 'I already did', 'wecodeart' );
+            
+            ?></a>
+        </p>
+    </div>
+</div>
